<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenish_white"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    tools:context=".ui.activitys.users.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:id="@+id/image_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/icon_logo_associacao_tapera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_weight="1"
                    android:text="@string/app_full_name"
                    android:textAlignment="center"
                    android:textColor="@color/tert_ebony_clay"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image_profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/image_logo"
                android:layout_marginTop="30dp"
                android:src="@drawable/baseline_account_circle_dark_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_profile_avatar"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_rounded_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="8dp"
                        android:alpha="0.9"
                        android:src="@drawable/icon_register_user" />

                    <EditText
                        android:id="@+id/edit_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="Nome"
                        android:inputType="textPersonName"
                        android:outlineProvider="none"
                        android:padding="2.5dp"
                        android:singleLine="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_rounded_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:alpha="0.9"
                        android:src="@drawable/icon_email" />

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:outlineProvider="none"
                        android:padding="2.5dp"
                        android:singleLine="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_rounded_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:alpha="0.9"
                        android:src="@drawable/icon_lock" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/senha"
                        android:inputType="textPassword"
                        android:outlineProvider="none"
                        android:padding="2.5dp"
                        android:singleLine="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_rounded_edittext"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:alpha="0.9"
                        android:src="@drawable/icon_lock" />

                    <EditText
                        android:id="@+id/edit_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:hint="@string/confirme_a_senha"
                        android:inputType="textPassword"
                        android:outlineProvider="none"
                        android:padding="2.5dp"
                        android:singleLine="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/button_view_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_view_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Mostrar a senha" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_register"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/main_green_haze"
                        android:padding="10dp"
                        android:text="@string/cadastrar_se" />

                    <Button
                        android:id="@+id/button_login"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/quin_ming"
                        android:padding="10dp"
                        android:text="@string/entrar" />
                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </ScrollView>

    <include
        android:id="@+id/include_progress_bar"
        layout="@layout/progress_bar" />
</RelativeLayout>